@startuml

class CmdCalculatorUI {
}

CmdCalculatorUI *-- RpnCalculator

interface RpnCalculator{
public RpnStack calculate(String str)
public RpnStack getStack()
}
abstract class AbstractRpnCalculator{
ThreadLocal<RpnStack> rpnStack
}
RpnCalculator <|-- AbstractRpnCalculator
class BasicRpnCalculator{
}
AbstractRpnCalculator <|-- BasicRpnCalculator


interface Operator{
public void operate()
}
BasicRpnCalculator -- RpnOperator
BasicRpnCalculator *-- RpnStack
BasicRpnCalculator *-- HistoryOperationStack


class RpnStack{
public String toString()
public RpnNumber pop()
public void push(RpnNumber number)
}
class RpnNumber{
}
RpnStack -- RpnNumber

class InsufficientParametersException{
}
class IllegalOperandException{
}

class HistoryOperationStack{
}
class Operation {
   RpnNumber result
}

Operation o-- Operator
Operation o-- RpnNumber
HistoryOperationStack o-- Operation

class AbstractRpnOperator{
}

Operator <|-- AbstractRpnOperator

enum RpnOperator{
  ADDITION
  SUBTRACTION
  MULTIPLICATION
  DIVISION
  SQRT
  UNDO
  CLEAR

  public RpnOperator valueOf(String op)
}
RpnOperator o-- Operator

@enduml